<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/fragment_main">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/main_page_tab"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab-followed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_posts" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab-subs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_subscribed" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab-messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_messages" />
    </com.google.android.material.tabs.TabLayout>
    <!--app:tabMode="scrollable"-->

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/main_tab_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_page_tab" />
</androidx.constraintlayout.widget.ConstraintLayout>